Fix visibility problem

--- a/src/styles/pages/Core.scss
+++ b/src/styles/pages/Core.scss
@@ -1256,5 +1256,5 @@ code {
 .ext-discord-popup {
   position: fixed;
   bottom: 0;
-  z-index: 1;
+  z-index: 3;
 }
